# MNK-Game

./: .pre-commit-config.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: basic_ci.yml
Code/: Board.py  Game.py  MyBot.py  Player.py
Tests/: test_Board.py  test_Game.py  test_MyBot.py  test_Player.py
tests/: test_Board.py  test_Game.py
