[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnk-game"
version = "0.1.0"
description = "A Python implementation of the MNK-Game with AI support."
authors = [
    {name = "Aleem Hussain", email = "aleemhussain2002@gmail.com"}
]
dependencies = [
    "numpy",
    "pytest",  # For testing
    "pygame"  # If you plan to add a GUI
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools]
packages = ["mnk_game"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
